- Updated `Omni` Navigation with matching heading text letter spacing as `Aside` Navigation - Fixed `Popover` Overlay still using testing variables

--- a/src/framework/navigation/omni/_default.scss
+++ b/src/framework/navigation/omni/_default.scss
@@ -41,6 +41,7 @@
      * Omni Heading Toknes
      */
 
+    --omni-heading-letter-spacing: 0.1em;
     --omni-heading-font-size: var(--font-size-heading-small);
     --omni-heading-font-weight: var(--font-weight-heading);
 }
